commit for helper

--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
     <!-- Load external PaperScript and associate it with myCanvas -->
     <script type="text/paperscript" src="myScript.js" canvas="myCanvas"></script>
     <script type="text/javascript" src="event.js" defer async></script>
-
 </head>
-
 <body>
     <div>jizz
         <button id="download">download</button>
+        <button id="regenerate">regenerate</button>
         <div id="colorPicker">
             <a class="color">
                 <div class="colorInner"></div>
