commit for class

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <script type="text/javascript" src="node_modules/paper/dist/paper-full.min.js"></script>
     <!-- Use CDN, may be useless ?-->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/paper.js/0.11.5/paper-full.min.js"></script>
-    <script src="jquery.tinycolorpicker.js" defer async></script>
+    <script src="jquery.tinycolorpicker.js"></script>
     <!-- Load external PaperScript and associate it with myCanvas -->
-    <script type="text/paperscript" src="myScript.js" canvas="myCanvas"></script>
-    <script type="text/javascript" src="event.js" defer async></script>
+    <script type="text/paperscript" src="myScript.js" canvas="myCanvas" defer></script>
 </head>
+
 <body>
     <div>jizz
         <button id="download">download</button>
