--- a/index.html
+++ b/index.html
@@ -20,26 +20,28 @@
 
 <body>
     <div id="gridContainer">
-        <img id="prev" src="./image/kekeke-10.png" alt="Previous">
+        <div id="prev"></div>
         <div id="username">username</div>
-        <img id="setting" src="./image/kekeke-08.png" alt="Setting">
+        <div id="setting"></div>
         <div id="title">
-            <img src="./image/kekeke-21.png" alt="head">
-            <p>EDIT PERSONAL IMAGE</p>
+            <div id="shot"></div>
+            <p id="edit">EDIT PERSONAL IMAGE</p>
         </div>
         <canvas id="myCanvas" resize></canvas>
-        <img id="reset" src="./image/kekeke-30.png" alt="Reset">
-        <div id="colorPicker">
-            <a class="color">
-                <div class="colorInner"></div>
-            </a>
-            <div class="track"></div>
-            <ul class="dropdown">
-                <li></li>
-            </ul>
-            <input type="hidden" class="colorInput" />
+        <div id="reset"></div>
+        <div id="cpContainer">
+            <div id="colorPicker">
+                <a class="color">
+                    <div class="colorInner"></div>
+                </a>
+                <div class="track"></div>
+                <ul class="dropdown">
+                    <li></li>
+                </ul>
+                <input type="hidden" class="colorInput" />
+            </div>
         </div>
-        <img id="submit" src="./image/kekeke-29.png" alt="Submit">
+        <div id="submit"></div>
     </div>
 </body>
 
